# daisync

./: Makefile.am  Makefile.in  README.md  configure  configure.ac  daisync
man/: Makefile.am  Makefile.in  daisync.1
scripts/: Makefile.am  Makefile.in  daisync  daisync-locate  daisync-plot  tutorial.sh
