#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([daisync], [20190124], [daimh@umich.edu])
AM_INIT_AUTOMAKE()
AC_OUTPUT(Makefile man/Makefile scripts/Makefile)
# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
